--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
                 android:value=".MainActivity" />
 
         </activity>
+
+        <!-- Register the MoviesContentProvider -->
+        <provider
+            android:name="com.example.android.popularmovies2.data.MoviesContentProvider"
+            android:authorities="com.example.android.popularmovies2"
+            android:exported="false" />
     </application>
 
 </manifest>
